# dwarffi

./: .gitignore  Cargo.toml  README.md  libfeatures.txt
.github/workflows/: ci.yml
dwarffi/: Cargo.toml  build.rs
dwarffi-js/: Cargo.toml
dwarffi-js/src/: codegen.rs  main.rs
dwarffi-js/src/codegen/: backend.rs  js.rs  koffi.rs  ref_napi.rs
dwarffi-js/tests/: README.md  integration_koffi.rs  test-koffi-bindings.mjs  test_primitive_types.rs
dwarffi-js/tests/common/: mod.rs
dwarffi/src/: dwarf_analyzer.rs  lib.rs  reader.rs  symbol_reader.rs  type_registry.rs  type_resolver.rs  types.rs
dwarffi/test_c/: makefile  readme.txt
dwarffi/tests/: integration_test.rs  test_type_extraction.rs
src/: dwarf_analyzer.rs  lib.rs  main.rs  symbol_reader.rs  type_registry.rs  type_resolver.rs  types.rs
test_c/: .gitignore  libtestlib.dylib  makefile  readme.md  testlib.c  testlib.h
tests/: integration_test.rs  test_type_extraction.rs
tests/common/: mod.rs
