[workspace]
resolver = "2"
members = ["dwarffi", "dwarffi-js"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike Sutherland <msutherland@fastmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/rland93/dwarffi"

[workspace.dependencies]
# Shared dependencies used by multiple crates
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal workspace dependencies
dwarffi = { path = "dwarffi" }
